apps/ragna/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ragna
  labels:
    name: ragna
